Move timer logic to IntentService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".settings.SettingsActivity"/>
+
+        <service android:name=".model.TimerServiceImpl" />
     </application>
 
 </manifest>
